tests/snapshots/snapshot_tests__constraints_table_ir.snap
---
source: tests/snapshot_tests.rs
expression: ir_context
---
SchemaContext {
    files: [
        FileDef {
            path: "constraints_table.poly",
            namespaces: [
                NamespaceDef {
                    name: "",
                    datasource: None,
                    items: [
                        Struct(
                            StructDef {
                                name: "ConstraintsTable",
                                fqn: "ConstraintsTable",
                                is_embed: false,
                                datasource: None,
                                cache_strategy: None,
                                load: None,
                                is_readonly: false,
                                soft_delete_field: None,
                                pack_separator: None,
                                header: [],
                                items: [
                                    Field(
                                        FieldDef {
                                            name: "id",
                                            field_type: TypeRef {
                                                original: "u32",
                                                fqn: "u32",
                                                namespace_fqn: "",
                                                type_name: "u32",
                                                parent_type_path: "",
                                                lang_type: "u32",
                                                is_primitive: true,
                                                is_struct: false,
                                                is_enum: false,
                                                is_option: false,
                                                is_list: false,
                                                inner_type: None,
                                            },
                                            attributes: [
                                                "Key",
                                            ],
                                            is_primary_key: true,
                                            is_unique: false,
                                            is_index: false,
                                            foreign_key: None,
                                            max_length: None,
                                            default_value: None,
                                            range: None,
                                            regex_pattern: None,
                                            auto_create: None,
                                            auto_update: None,
                                            search_index: None,
                                        },
                                    ),
                                    Field(
                                        FieldDef {
                                            name: "code",
                                            field_type: TypeRef {
                                                original: "string",
                                                fqn: "string",
                                                namespace_fqn: "",
                                                type_name: "string",
                                                parent_type_path: "",
                                                lang_type: "string",
                                                is_primitive: true,
                                                is_struct: false,
                                                is_enum: false,
                                                is_option: false,
                                                is_list: false,
                                                inner_type: None,
                                            },
                                            attributes: [
                                                "Index(IsUnique = true)",
                                                "MaxLength(10)",
                                            ],
                                            is_primary_key: false,
                                            is_unique: true,
                                            is_index: false,
                                            foreign_key: None,
                                            max_length: Some(
                                                10,
                                            ),
                                            default_value: None,
                                            range: None,
                                            regex_pattern: Some(
                                                "^[A-Z0-9]{5,10}$",
                                            ),
                                            auto_create: None,
                                            auto_update: None,
                                            search_index: None,
                                        },
                                    ),
                                    Field(
                                        FieldDef {
                                            name: "value",
                                            field_type: TypeRef {
                                                original: "f32",
                                                fqn: "f32",
                                                namespace_fqn: "",
                                                type_name: "f32",
                                                parent_type_path: "",
                                                lang_type: "f32",
                                                is_primitive: true,
                                                is_struct: false,
                                                is_enum: false,
                                                is_option: false,
                                                is_list: false,
                                                inner_type: None,
                                            },
                                            attributes: [],
                                            is_primary_key: false,
                                            is_unique: false,
                                            is_index: false,
                                            foreign_key: None,
                                            max_length: None,
                                            default_value: Some(
                                                "0",
                                            ),
                                            range: Some(
                                                RangeDef {
                                                    min: "0",
                                                    max: "100",
                                                    literal_type: "float",
                                                },
                                            ),
                                            regex_pattern: None,
                                            auto_create: None,
                                            auto_update: None,
                                            search_index: None,
                                        },
                                    ),
                                    Field(
                                        FieldDef {
                                            name: "category_id",
                                            field_type: TypeRef {
                                                original: "u32",
                                                fqn: "u32",
                                                namespace_fqn: "",
                                                type_name: "u32",
                                                parent_type_path: "",
                                                lang_type: "u32",
                                                is_primitive: true,
                                                is_struct: false,
                                                is_enum: false,
                                                is_option: false,
                                                is_list: false,
                                                inner_type: None,
                                            },
                                            attributes: [],
                                            is_primary_key: false,
                                            is_unique: false,
                                            is_index: false,
                                            foreign_key: Some(
                                                ForeignKeyDef {
                                                    target_table_fqn: "Category",
                                                    target_field: "id",
                                                    alias: None,
                                                },
                                            ),
                                            max_length: None,
                                            default_value: None,
                                            range: None,
                                            regex_pattern: None,
                                            auto_create: None,
                                            auto_update: None,
                                            search_index: None,
                                        },
                                    ),
                                ],
                                indexes: [
                                    IndexDef {
                                        name: "ById",
                                        fields: [
                                            IndexFieldDef {
                                                name: "id",
                                                field_type: TypeRef {
                                                    original: "u32",
                                                    fqn: "u32",
                                                    namespace_fqn: "",
                                                    type_name: "u32",
                                                    parent_type_path: "",
                                                    lang_type: "u32",
                                                    is_primitive: true,
                                                    is_struct: false,
                                                    is_enum: false,
                                                    is_option: false,
                                                    is_list: false,
                                                    inner_type: None,
                                                },
                                            },
                                        ],
                                        is_unique: true,
                                        source: "constraint",
                                    },
                                    IndexDef {
                                        name: "ByCode",
                                        fields: [
                                            IndexFieldDef {
                                                name: "code",
                                                field_type: TypeRef {
                                                    original: "string",
                                                    fqn: "string",
                                                    namespace_fqn: "",
                                                    type_name: "string",
                                                    parent_type_path: "",
                                                    lang_type: "string",
                                                    is_primitive: true,
                                                    is_struct: false,
                                                    is_enum: false,
                                                    is_option: false,
                                                    is_list: false,
                                                    inner_type: None,
                                                },
                                            },
                                        ],
                                        is_unique: true,
                                        source: "constraint",
                                    },
                                    IndexDef {
                                        name: "ByCategoryId",
                                        fields: [
                                            IndexFieldDef {
                                                name: "category_id",
                                                field_type: TypeRef {
                                                    original: "u32",
                                                    fqn: "u32",
                                                    namespace_fqn: "",
                                                    type_name: "u32",
                                                    parent_type_path: "",
                                                    lang_type: "u32",
                                                    is_primitive: true,
                                                    is_struct: false,
                                                    is_enum: false,
                                                    is_option: false,
                                                    is_list: false,
                                                    inner_type: None,
                                                },
                                            },
                                        ],
                                        is_unique: false,
                                        source: "constraint",
                                    },
                                ],
                                relations: [],
                            },
                        ),
                    ],
                },
            ],
            renames: [],
        },
    ],
}
