tests/snapshots/snapshot_tests__datasource_test_ast.snap
---
source: tests/snapshot_tests.rs
expression: all_asts
---
[
    AstRoot {
        path: "tests/schemas\\datasource_test.poly",
        file_imports: [],
        definitions: [
            Namespace(
                Namespace {
                    metadata: [
                        DocComment(
                            "Test schema for @datasource annotation",
                        ),
                        DocComment(
                            "This tests the automatic DDL generation when using @datasource",
                        ),
                        Annotation(
                            Annotation {
                                name: Some(
                                    "datasource",
                                ),
                                args: [
                                    Positional(
                                        String(
                                            "sqlite",
                                        ),
                                    ),
                                ],
                            },
                        ),
                    ],
                    path: [
                        "game",
                        "data",
                    ],
                    imports: [],
                    definitions: [
                        Table(
                            Table {
                                metadata: [],
                                name: Some(
                                    "ItemTable",
                                ),
                                members: [
                                    Field(
                                        Regular(
                                            RegularField {
                                                metadata: [],
                                                name: Some(
                                                    "id",
                                                ),
                                                field_type: TypeWithCardinality {
                                                    base_type: Basic(
                                                        U32,
                                                    ),
                                                    cardinality: None,
                                                },
                                                constraints: [
                                                    PrimaryKey,
                                                ],
                                                field_number: None,
                                            },
                                        ),
                                    ),
                                    Field(
                                        Regular(
                                            RegularField {
                                                metadata: [],
                                                name: Some(
                                                    "name",
                                                ),
                                                field_type: TypeWithCardinality {
                                                    base_type: Basic(
                                                        String,
                                                    ),
                                                    cardinality: None,
                                                },
                                                constraints: [],
                                                field_number: None,
                                            },
                                        ),
                                    ),
                                    Field(
                                        Regular(
                                            RegularField {
                                                metadata: [],
                                                name: Some(
                                                    "price",
                                                ),
                                                field_type: TypeWithCardinality {
                                                    base_type: Basic(
                                                        U32,
                                                    ),
                                                    cardinality: None,
                                                },
                                                constraints: [],
                                                field_number: None,
                                            },
                                        ),
                                    ),
                                ],
                            },
                        ),
                        Table(
                            Table {
                                metadata: [],
                                name: Some(
                                    "SkillTable",
                                ),
                                members: [
                                    Field(
                                        Regular(
                                            RegularField {
                                                metadata: [],
                                                name: Some(
                                                    "id",
                                                ),
                                                field_type: TypeWithCardinality {
                                                    base_type: Basic(
                                                        U32,
                                                    ),
                                                    cardinality: None,
                                                },
                                                constraints: [
                                                    PrimaryKey,
                                                ],
                                                field_number: None,
                                            },
                                        ),
                                    ),
                                    Field(
                                        Regular(
                                            RegularField {
                                                metadata: [],
                                                name: Some(
                                                    "name",
                                                ),
                                                field_type: TypeWithCardinality {
                                                    base_type: Basic(
                                                        String,
                                                    ),
                                                    cardinality: None,
                                                },
                                                constraints: [],
                                                field_number: None,
                                            },
                                        ),
                                    ),
                                    Field(
                                        Regular(
                                            RegularField {
                                                metadata: [],
                                                name: Some(
                                                    "damage",
                                                ),
                                                field_type: TypeWithCardinality {
                                                    base_type: Basic(
                                                        U32,
                                                    ),
                                                    cardinality: None,
                                                },
                                                constraints: [],
                                                field_number: None,
                                            },
                                        ),
                                    ),
                                ],
                            },
                        ),
                        Enum(
                            Enum {
                                metadata: [],
                                name: Some(
                                    "ItemType",
                                ),
                                variants: [
                                    EnumVariant {
                                        metadata: [],
                                        name: Some(
                                            "Weapon",
                                        ),
                                        value: Some(
                                            1,
                                        ),
                                        inline_comment: None,
                                    },
                                    EnumVariant {
                                        metadata: [],
                                        name: Some(
                                            "Armor",
                                        ),
                                        value: Some(
                                            2,
                                        ),
                                        inline_comment: None,
                                    },
                                    EnumVariant {
                                        metadata: [],
                                        name: Some(
                                            "Potion",
                                        ),
                                        value: Some(
                                            3,
                                        ),
                                        inline_comment: None,
                                    },
                                ],
                            },
                        ),
                    ],
                },
            ),
            Namespace(
                Namespace {
                    metadata: [
                        Annotation(
                            Annotation {
                                name: Some(
                                    "datasource",
                                ),
                                args: [
                                    Positional(
                                        String(
                                            "mysql",
                                        ),
                                    ),
                                ],
                            },
                        ),
                    ],
                    path: [
                        "game",
                        "user",
                    ],
                    imports: [],
                    definitions: [
                        Table(
                            Table {
                                metadata: [],
                                name: Some(
                                    "Player",
                                ),
                                members: [
                                    Field(
                                        Regular(
                                            RegularField {
                                                metadata: [],
                                                name: Some(
                                                    "id",
                                                ),
                                                field_type: TypeWithCardinality {
                                                    base_type: Basic(
                                                        U32,
                                                    ),
                                                    cardinality: None,
                                                },
                                                constraints: [
                                                    PrimaryKey,
                                                ],
                                                field_number: None,
                                            },
                                        ),
                                    ),
                                    Field(
                                        Regular(
                                            RegularField {
                                                metadata: [],
                                                name: Some(
                                                    "name",
                                                ),
                                                field_type: TypeWithCardinality {
                                                    base_type: Basic(
                                                        String,
                                                    ),
                                                    cardinality: None,
                                                },
                                                constraints: [],
                                                field_number: None,
                                            },
                                        ),
                                    ),
                                    Field(
                                        Regular(
                                            RegularField {
                                                metadata: [],
                                                name: Some(
                                                    "level",
                                                ),
                                                field_type: TypeWithCardinality {
                                                    base_type: Basic(
                                                        U16,
                                                    ),
                                                    cardinality: None,
                                                },
                                                constraints: [],
                                                field_number: None,
                                            },
                                        ),
                                    ),
                                ],
                            },
                        ),
                    ],
                },
            ),
            Namespace(
                Namespace {
                    metadata: [
                        DocComment(
                            "No datasource - should be included in sqlite by default",
                        ),
                    ],
                    path: [
                        "game",
                        "common",
                    ],
                    imports: [],
                    definitions: [
                        Table(
                            Table {
                                metadata: [],
                                name: Some(
                                    "Config",
                                ),
                                members: [
                                    Field(
                                        Regular(
                                            RegularField {
                                                metadata: [],
                                                name: Some(
                                                    "key",
                                                ),
                                                field_type: TypeWithCardinality {
                                                    base_type: Basic(
                                                        String,
                                                    ),
                                                    cardinality: None,
                                                },
                                                constraints: [
                                                    PrimaryKey,
                                                ],
                                                field_number: None,
                                            },
                                        ),
                                    ),
                                    Field(
                                        Regular(
                                            RegularField {
                                                metadata: [],
                                                name: Some(
                                                    "value",
                                                ),
                                                field_type: TypeWithCardinality {
                                                    base_type: Basic(
                                                        String,
                                                    ),
                                                    cardinality: None,
                                                },
                                                constraints: [],
                                                field_number: None,
                                            },
                                        ),
                                    ),
                                ],
                            },
                        ),
                    ],
                },
            ),
        ],
        renames: [],
    },
]
